- Ported to SDL 2
- Added VSync and windowed fullscreen options
- Added support for scaling the graphics
- Added ability to open external links in news, chat and NPC dialogs
- Added support for text formatting to NPC dialogs
- Added support for reading most client-data settings from settings.xml
- Added support for XML includes, both absolute and relative
- Added support for map/layer mask
- Added support for particle effects on equipment
- Added support for hit/miss sounds on equipment for all players
- Added online player list to Social window
- Added notification sound on receiving whisper
- Added default ports when connecting to a custom server
- Added an option to show being IDs to the debug window
- Added an option to render widget outlines to the debug window
- Added support for the "persistentIp" server info setting
- Added support for attributes.xml when connecting to tmwAthena
- Added support for charcreation.xml settings
- Added support for hair colors defined in itemcolors.xml
- Added support for customizing NPC and Monster hover cursor
- Added support for disabling selection for certain NPCs and Monsters
- Added support for race-specific hair styles and per-character gender
- Added support for the TMX tile animation format
- Added support for bold font markup to BrowserBox
- Added pointy hand mouse cursor, used when hovering links
- Added error when trying to trade a non tradable item
- Added --server-type / -y parameter
- Use variable time logic update to better adjust to the framerate
- Re-download updates when their checksum no longer matches
- Enabled resizing windows from all sides
- Enabled whispers in tabs by default
- Made pickup notifications to appear as particle instead of text by default
- Made names update immediately when changing "Show gender" option
- Made client config statically typed and save as more structured XML
- Custom mouse cursor is now rendered by the system
- Limit shop's Max button to available carry weight